language/move-prover/tests/sources/functional/specs_in_fun.exp
Move prover returns: exiting with boogie verification errors
error: unknown assertion failed

    ┌── tests/sources/functional/specs_in_fun.move:45:13 ───
    │
 45 │             assert x == y;
    │             ^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun.move:42: simple1_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/specs_in_fun.move:43: simple1_incorrect
    =     at tests/sources/functional/specs_in_fun.move:45: simple1_incorrect

error: unknown assertion failed

    ┌── tests/sources/functional/specs_in_fun.move:53:13 ───
    │
 53 │             assert x == y;
    │             ^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun.move:49: simple2_incorrect
    =         x = <redacted>
    =     at tests/sources/functional/specs_in_fun.move:51: simple2_incorrect
    =         y = <redacted>
    =     at tests/sources/functional/specs_in_fun.move:53: simple2_incorrect

error: unknown assertion failed

    ┌── tests/sources/functional/specs_in_fun.move:60:13 ───
    │
 60 │             assert x > y;
    │             ^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun.move:57: simple3_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/specs_in_fun.move:59: simple3_incorrect
    =     at tests/sources/functional/specs_in_fun.move:60: simple3_incorrect

error: unknown assertion failed

    ┌── tests/sources/functional/specs_in_fun.move:69:13 ───
    │
 69 │             assert z > 2*x;
    │             ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/specs_in_fun.move:64: simple4_incorrect
    =         x = <redacted>
    =         y = <redacted>
    =     at tests/sources/functional/specs_in_fun.move:66: simple4_incorrect
    =         z = <redacted>
    =     at tests/sources/functional/specs_in_fun.move:68: simple4_incorrect
    =     at tests/sources/functional/specs_in_fun.move:69: simple4_incorrect
